<resources>
    <string name="app_name">ShopEase</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="my_favorites">My Favorites</string>
    <string name="my_profile">My Profile</string>
    <string name="text_description">This versatile men’s waterproof jacket combines style and functionality, making it ideal for both urban adventures and outdoor excursions. Crafted from high-quality, lightweight materials, it’s designed to withstand the elements, keeping you warm and dry even in unpredictable weather.</string>
    <string name="payment_method">Choose Your Payment Method</string>
    <string name="success">Success</string>
    <string name="dana">Dana</string>
    <string name="gopay">Gopay</string>
    <string name="bca_virtual_account">BCA Virtual Account</string>
    <string name="mandiri_virtual_account">Mandiri Virtual Account</string>
    <string name="transfer_bank_bca">Transfer Bank BCA</string>
    <string name="transfer_bank_mandiri">Transfer Bank Mandiri</string>
    <string name="shop_ease">Shop Ease</string>
    <string name="default_web_client_id">1002735638769-h07o324toppm0jq4a5ui787cuoj86m2c.apps.googleusercontent.com</string>
    <string name="checkout">Checkout</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="product">Product</string>
    <string name="get_started">Get Started</string>
    <string name="tittle_onboard">A Small Step for Big Style</string>
    <string name="desc_onboard">ShopEase helps you look your best with selected shoes from top brands. Find your dream shoes and take the first step to step up your confidence.</string>
    <string name="button_back">button back</string>
    <string name="choose_payment">Choose Payment</string>
    <string name="detail_product">Detail Product</string>
    <string name="favorite_button">favorite button</string>
    <string name="description_product">Description Product</string>
    <string name="google_icon">google icon</string>
    <string name="login_with_google">Login With Google</string>
    <string name="home">Home</string>
    <string name="category">Category</string>
    <string name="favorite">Favorite</string>
    <string name="order">Order</string>
    <string name="profile">Profile</string>
    <string name="logo_apps">Logo Apps</string>
    <string name="_1">1</string>
    <string name="text_error">an error occurred, please try again</string>
</resources>