<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.onBoarding.OnBoardingActivity">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/iv_onBoard"
        android:layout_width="380dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_height="420dp"
        android:src="@drawable/image_shoes"
        android:layout_marginTop="30dp"
        android:scaleType="centerCrop"
        app:layout_constraintTop_toTopOf="parent"
        android:theme="@style/RoundedImageView"/>

    <TextView
        android:id="@+id/tv_onBoard_tittle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:textColor="@color/text_primary"
        android:fontFamily="@font/roboto"
        android:text="@string/tittle_onboard"
        android:textAlignment="center"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_onBoard" />

    <TextView
        android:id="@+id/tv_onBoard_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/roboto"
        android:padding="16dp"
        android:text="@string/desc_onboard"
        android:textAlignment="center"
        android:textSize="16sp"
        android:textColor="@color/text_secondary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_onBoard_tittle" />

    <Button
        android:id="@+id/btn_start"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/get_started"
        app:backgroundTint="@null"
        android:textSize="16sp"
        android:background="@drawable/bg_button_checkout"
        app:layout_constraintTop_toBottomOf="@id/tv_onBoard_desc" />



</androidx.constraintlayout.widget.ConstraintLayout>