<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.detailProduct.DetailProductActivity">

    <ImageView
        android:id="@+id/iv_back"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/button_back"
        android:src="@drawable/icon_arrow_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_detail_product"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto"
        android:text="@string/detail_product"
        android:textColor="@color/text_primary"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/iv_back" />

    <ImageView
        android:id="@+id/iv_share"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="button share"
        android:src="@drawable/baseline_share_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ScrollView
        android:id="@+id/sv_content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/cv_button"
        app:layout_constraintTop_toBottomOf="@id/tv_detail_product">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp">

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/vp_detail_product_images"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_marginTop="32dp"
                app:layout_constraintTop_toTopOf="parent" />

            <com.tbuonomo.viewpagerdotsindicator.DotsIndicator
                android:id="@+id/dotsIndicator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:dotsColor="@color/icon_gray"
                app:selectedDotColor="@color/primary_color"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/vp_detail_product_images" />


            <TextView
                android:id="@+id/tv_detail_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="12dp"
                android:fontFamily="@font/roboto"
                android:textColor="@color/text_primary"
                android:textSize="28sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@id/iv_favorite"
                app:layout_constraintStart_toStartOf="@id/vp_detail_product_images"
                app:layout_constraintTop_toBottomOf="@id/dotsIndicator"
                tools:text="Shirt" />


            <ImageView
                android:id="@+id/iv_favorite"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:contentDescription="@string/favorite_button"
                android:src="@drawable/baseline_favorite_24"
                app:layout_constraintBottom_toBottomOf="@id/tv_detail_name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/tv_detail_name" />

            <TextView
                android:id="@+id/tv_price_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:fontFamily="@font/roboto"
                android:textColor="@color/text_price_regular"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="@id/tv_detail_name"
                app:layout_constraintTop_toBottomOf="@id/tv_detail_name"
                tools:text="Rp2.000.000" />

            <RatingBar
                android:id="@+id/rate_product"
                style="@style/Widget.AppCompat.RatingBar.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:numStars="5"
                android:progressTint="#FFEB3B"
                android:rating="4.5"
                android:stepSize="0.1"
                app:layout_constraintStart_toStartOf="@id/tv_price_detail"
                app:layout_constraintTop_toBottomOf="@id/tv_price_detail" />

            <TextView
                android:id="@+id/tv_rate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:fontFamily="@font/roboto"
                android:text="4.5"
                android:textColor="@color/text_primary"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@id/rate_product"
                app:layout_constraintStart_toEndOf="@id/rate_product"
                app:layout_constraintTop_toTopOf="@id/rate_product" />

            <TextView
                android:id="@+id/tv_tittle_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/roboto"
                android:text="@string/description_product"
                android:textColor="@color/text_primary"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@id/tv_price_detail"
                app:layout_constraintTop_toBottomOf="@id/rate_product" />


            <TextView
                android:id="@+id/tv_description_product"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/roboto"
                android:text="@string/text_description"
                android:textColor="@color/text_primary"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/tv_tittle_description"
                app:layout_constraintTop_toBottomOf="@id/tv_tittle_description" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>


    <androidx.cardview.widget.CardView
        android:id="@+id/cv_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="12dp">

            <Button
                android:id="@+id/btn_cart"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_button_cart"
                android:text="@string/add_to_cart"
                android:textColor="@color/primary_color"
                android:textStyle="bold"
                app:backgroundTint="@null"
                app:layout_constraintEnd_toStartOf="@id/btn_checkout"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/btn_checkout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:background="@drawable/bg_button_checkout"
                android:text="@string/checkout"
                app:backgroundTint="@null"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/btn_cart"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>